refactor: remove old nodes

--- a/src/nodes/answer.html
+++ b/src/nodes/answer.html
@@ -30,6 +30,6 @@
     but it can be useful to force an answer before a pause in some cases.
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/answer/">Jambonz answer reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/answer">Jambonz answer reference</a></li>
     </ul>
 </script>
