--- a/src/nodes/conference.html
+++ b/src/nodes/conference.html
@@ -145,7 +145,7 @@
   The conference verb places a call into a conference.
   <h3>References</h3>
   <ul>
-    <li><a href="https://www.jambonz.org/docs/webhooks/conference/">Jambonz conference reference</a></li>
+    <li><a href="https://docs.jambonz.org/verbs/verbs/conference">Jambonz conference reference</a></li>
   </ul>
 </script>
 
