--- a/src/nodes/config.html
+++ b/src/nodes/config.html
@@ -1,3 +1,4 @@
+<script src="resources/@jambonz/node-red-contrib-jambonz/editor.js"></script>
 <!-- Javascript -->
 <script type="text/javascript">
   RED.nodes.registerType("cfg", {
@@ -656,7 +657,7 @@
   <h3>References</h3>
   <ul>
     <li>
-      <a href="https://www.jambonz.org/docs/webhooks/config/"
+      <a href="https://docs.jambonz.org/verbs/verbs/config"
         >Jambonz config reference</a
       >
     </li>
