--- a/src/nodes/dequeue.html
+++ b/src/nodes/dequeue.html
@@ -113,6 +113,6 @@
   The dequeue verb removes the a call from the front of a specified queue and bridges that call to the current caller.
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/dequeue/">Jambonz dequeue reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/dequeue">Jambonz dequeue reference</a></li>
     </ul>
 </script>
