--- a/src/nodes/dial.html
+++ b/src/nodes/dial.html
@@ -570,14 +570,14 @@
       <input type="text" id="node-input-tag" placeholder="tag object">
       <input type="hidden" id="node-input-tagType">
     </div>
-     <div class="form-row">
-        <label for="node-input-forwardPAI">forwardPAI</label>
-        <select id="node-input-forwardPAI">
-          <option value="default" selected>default</option>
-          <option value=true>true</option>
-          <option value=false>false</option>
-        </select>
-      </div>
+    <div class="form-row">
+      <label for="node-input-forwardPAI">Forward  PAI</label>
+      <select id="node-input-forwardPAI">
+        <option value="default" selected>default</option>
+        <option value=true>true</option>
+        <option value=false>false</option>
+      </select>
+    </div>
     <fieldset>
       <legend>Live audio</legend>
       <div class="form-row">
@@ -721,7 +721,7 @@
     <fieldset>
       <legend>Answering Machine Detection</legend>
       <div class="form-row">
-        <label for="node-input-amd_actionHook">actionHook</label>
+        <label for="node-input-amd_actionHook">Action Hook</label>
         <input type="text" id="node-input-amd_actionHook">
         <input type="hidden" id="node-input-amd_actionHookType">
       </div>
@@ -822,6 +822,6 @@
     <h3>Details</h3>
     The dial verb is used to create a new call by dialing out to a number, a registered sip user, or sip endpoint
       <ul>
-          <li><a href="https://www.jambonz.org/docs/webhooks/dial/">Jambonz dial reference</a></li>
+          <li><a href="https://docs.jambonz.org/verbs/verbs/dial">Jambonz dial reference</a></li>
       </ul>
   </script>
