--- a/src/nodes/dub.html
+++ b/src/nodes/dub.html
@@ -127,7 +127,7 @@
   <h3>References</h3>
   <ul>
     <li>
-      <a href="https://www.jambonz.org/docs/webhooks/dub/"
+      <a href="https://docs.jambonz.org/verbs/verbs/dub"
         >Jambonz dub reference</a
       >
     </li>
