--- a/src/nodes/enqueue.html
+++ b/src/nodes/enqueue.html
@@ -97,6 +97,6 @@
   The enqueue command is used to place a caller in a queue.
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/enqueue/">Jambonz enqueue reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/enqueue">Jambonz enqueue reference</a></li>
     </ul>
 </script>
