--- a/src/nodes/hangup.html
+++ b/src/nodes/hangup.html
@@ -103,6 +103,6 @@
   The hangup command terminates the call and ends the application.
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/hangup/">Jambonz hangup reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/hangup">Jambonz hangup reference</a></li>
     </ul>
 </script>
