--- a/src/nodes/leave.html
+++ b/src/nodes/leave.html
@@ -34,6 +34,6 @@
   <h3>Details</h3>
   The leave verb transfers a call out of a queue. The call then returns to the flow of execution following the enqueue verb that parked the call, or the document returned by that verbs actionHook property, if provided.<h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/leave/">Jambonz leave reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/leave">Jambonz leave reference</a></li>
     </ul>
 </script>
