--- a/src/nodes/listen.html
+++ b/src/nodes/listen.html
@@ -356,6 +356,6 @@ RED.nodes.registerType('listen',{
   <h3>Details</h3>
   The listen verb establishes a connection to a websocket server and sends live audio for the current call.<h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/listen/">Jambonz listen reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/listen">Jambonz listen reference</a></li>
     </ul>
 </script>
