--- a/src/nodes/pause.html
+++ b/src/nodes/pause.html
@@ -61,6 +61,6 @@
   The pause verb waits a specified number of seconds before continuing to execute the application.
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/pause/">Jambonz pause reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/pause">Jambonz pause reference</a></li>
     </ul>
 </script>
