--- a/src/nodes/play.html
+++ b/src/nodes/play.html
@@ -114,6 +114,6 @@ RED.nodes.registerType('play',{
   
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/play/">Jambonz play reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/play">Jambonz play reference</a></li>
     </ul>
 </script>
