--- a/src/nodes/rasa.html
+++ b/src/nodes/rasa.html
@@ -98,7 +98,7 @@
       
       <h3>References</h3>
         <ul>
-            <li><a href="https://www.jambonz.org/docs/webhooks/rasa/">Jambonz rasa reference</a></li>
+            <li><a href="https://docs.jambonz.org/verbs/verbs/rasa">Jambonz rasa reference</a></li>
         </ul>
       </script>
 </script>
