--- a/src/nodes/redirect.html
+++ b/src/nodes/redirect.html
@@ -61,6 +61,6 @@
       The redirect verb retrieves a new URL to execute for the current call.
       <h3>References</h3>
         <ul>
-            <li><a href="https://www.jambonz.org/docs/webhooks/redirect/">Jambonz redirect reference</a></li>
+            <li><a href="https://docs.jambonz.org/verbs/verbs/redirect">Jambonz redirect reference</a></li>
         </ul>
 </script>
