--- a/src/nodes/say.html
+++ b/src/nodes/say.html
@@ -1,4 +1,5 @@
 <!-- Javascript -->
+<script src="resources/@jambonz/node-red-contrib-jambonz/editor.js"></script>
 <script type="text/javascript">
   RED.nodes.registerType('say',{
       category: 'jambonz',
@@ -113,5 +114,5 @@
   <code>The payload is {{msg.payload}}</code>
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/say/">Jambonz say reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/say">Jambonz say reference</a></li>
 </script>
