--- a/src/nodes/sip-decline.html
+++ b/src/nodes/sip-decline.html
@@ -88,6 +88,6 @@
   The sip:decline verb rejects an incoming call.
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/sip-decline/">Jambonz sip:decline reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/sip-decline">Jambonz sip:decline reference</a></li>
     </ul>
 </script>
