--- a/src/nodes/sip-refer.html
+++ b/src/nodes/sip-refer.html
@@ -108,6 +108,6 @@
   <h3>Details</h3>
   The sip:refer action is used to blind transfer a call. It will send a sip REFER to the far end carrier or sip phone, which must support the REFER in order for the transfer to work. After the sip:refer completes successfully, the call leg will have left the jambonz platform.  <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/sip-refer/">Jambonz sip:refer reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/sip-refer">Jambonz sip:refer reference</a></li>
     </ul>
 </script>
