--- a/src/nodes/sip-request.html
+++ b/src/nodes/sip-request.html
@@ -85,12 +85,12 @@
   <h3>Outputs</h3>
   <dl class="message-properties">
     <dt>jambonz<span class="property-type">object</span></dt>
-    <dd> <code>msg.jambonz</code> will contain any previous actions provided to the input with the new <code>sip:decline</code> action appended  </dd>
+    <dd> <code>msg.jambonz</code> will contain any previous actions provided to the input with the new <code>sip:request</code> action appended  </dd>
   </dl>
   
   <h3>Details</h3>
   The sip:request verb completes when a response is received from the far end. The actionHook provides the status code of the sip response:  <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/sip-request/">Jambonz sip:request reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/sip-request">Jambonz sip:request reference</a></li>
     </ul>
 </script>
