--- a/src/nodes/tag.html
+++ b/src/nodes/tag.html
@@ -59,6 +59,6 @@
     <h3>Details</h3>
     The tag verb is used to add properties to the standard call attributes that jambonz includes on every action or call status HTTP POST request.<h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/tag/">Jambonz tag reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/tag">Jambonz tag reference</a></li>
     </ul>
 </script>
