--- a/src/nodes/dialogflow.html
+++ b/src/nodes/dialogflow.html
@@ -1,4 +1,5 @@
 <!-- Javascript -->
+<script src="resources/@jambonz/node-red-contrib-jambonz/editor.js"></script>
 <script type="text/javascript">
   var mustacheType = {
     value: 'mustache',
@@ -251,6 +252,6 @@
       
         <h3>References</h3>
           <ul>
-              <li><a href="https://www.jambonz.org/docs/webhooks/dialogflow/">Jambonz dialogflow reference</a></li>
+              <li><a href="https://docs.jambonz.org/verbs/verbs/dialogflow">Jambonz dialogflow reference</a></li>
           </ul>
 </script>
