--- a/src/nodes/dtmf.html
+++ b/src/nodes/dtmf.html
@@ -69,6 +69,6 @@
 
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/dtmf/">Jambonz dtmf reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/dtmf">Jambonz dtmf reference</a></li>
     </ul>
 </script>
