fix: invalid url references

--- a/src/nodes/_template.html
+++ b/src/nodes/_template.html
@@ -46,9 +46,9 @@
     </dl>
       
       <h3>Details</h3>
-      The listen verb establishes a connection to a websocket server and sends live audio for the current call.<h3>References</h3>
+      DETAILS ABOUT THE VERB.<h3>References</h3>
         <ul>
-            <li><a href="https://www.jambonz.org/docs/webhooks/listen/">Jambonz listen reference</a></li>
+            <li><a href="https://docs.jambonz.org/verbs/verbs/VERB">Jambonz verb reference</a></li>
         </ul>
       </script>
 </script>
