--- a/src/nodes/generic-verb.html
+++ b/src/nodes/generic-verb.html
@@ -76,6 +76,6 @@
   Allows use of complex or new verbs in Jambonz that may not have nodes, set the verb name and then pass any additional attributes as a JSON object in the data field.
   <h3>References</h3>
     <ul>
-        <li><a href="https://www.jambonz.org/docs/webhooks/">Jambonz Verb reference</a></li>
+        <li><a href="https://docs.jambonz.org/verbs/verbs/overview">Jambonz Verbs Reference</a></li>
     </ul>
 </script>
