--- a/src/nodes/lcc.html
+++ b/src/nodes/lcc.html
@@ -546,8 +546,8 @@
   <h3>Details</h3>
   The lcc command is used to perform live call control on a call in progress.
   The call can be terminated, the caller can be muted or unmuted, or the live 
-  audio feed that is being sent via a <a href="https://www.jambonz.org/docs/webhooks/listen/">listen</a> verb can be paused or resumed.
+  audio feed that is being sent via a <a href="https://docs.jambonz.org/verbs/verbs/listen">listen</a> verb can be paused or resumed.
   <br/><br/>
-  A common use case is to use dtmf captures in a <a href="https://www.jambonz.org/docs/webhooks/dial/">dial</a> verb to call a webhook 
+  A common use case is to use dtmf captures in a <a href="https://docs.jambonz.org/verbs/verbs/dial">dial</a> verb to call a webhook 
   that then uses lcc to modify the state of the call.
 </script>
