--- a/src/nodes/webhooks.html
+++ b/src/nodes/webhooks.html
@@ -70,7 +70,7 @@
     </dl>
 
     <h3>Reference</h3>
-    See the <a href="https://www.jambonz.org/docs/webhooks/overview/"> Jambonz API Webhooks Reference </a> for details of all the parameters on a voice webhook
+    See the <a href="https://docs.jambonz.org/verbs/verbs/overview"> Jambonz Verbs Reference </a> for details of all the parameters on a voice webhook
 </script>
 
 <script type="text/javascript">
@@ -95,7 +95,7 @@
 
 <script type="text/html" data-template-name="webhook out">
     <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>`
         <input type="text" id="node-input-name" placeholder="name">
     </div>
 </script>
@@ -104,5 +104,5 @@
     <p>Returns jambonz application or user authentication response.</p>
 
     <h3>Reference</h3>
-    See the <a href="https://www.jambonz.org/docs/webhooks/overview/"> Jambonz API Webhooks Reference </a> for details of all the parameters on a voice webhook
+    See the <a href="https://docs.jambonz.org/verbs/verbs/overview"> Jambonz Verbs Reference </a> for details of all the parameters on a voice webhook
 </script>
