--- a/src/nodes/webhooks.html
+++ b/src/nodes/webhooks.html
@@ -95,7 +95,7 @@
 
 <script type="text/html" data-template-name="webhook out">
     <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>`
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="name">
     </div>
 </script>
